# Lab

./: .gitmodules  Build.bat  CMakeLists.txt  Main.cpp  README.md
ext/dearimgui/: imgui_draw.cpp
ext/fftw/lib/cmake/fftw3/: FFTW3Config.cmake  FFTW3LibraryDepends.cmake
ext/fftw/lib/pkgconfig/: fftw3.pc
ext/implot/: implot.h
resources/: Peppers.tif
resources/Gallery/ImageLab/: ColorDistanceYellowpng
shaders/: AddColor.glsl  AddGradient.glsl  AddImage.glsl  AddNoise.glsl  AddTexture.glsl  ArbitraryFilter.glsl  CannyGradient.glsl  ClearTexture.glsl  ColorContrastStrech.glsl  ColorDistance.glsl  CopyTexture.glsl  CurveGrading.glsl  DifferenceOfGaussians.glsl  Dilation.glsl  Equalize.glsl  EqualizeBuildLut.glsl  Erosion.glsl  GammaCorrection.glsl  GaussianBlur.glsl  Gradient.glsl  GrayScale.glsl  GrayScaleContrastStretch.glsl  HalfToning.glsl  HardComposite.glsl  HardCompositeViewMask.glsl  Histogram.glsl  LaplacianOfGaussian.glsl  LocalThreshold.glsl  MedianFilter.glsl  MinMaxFilter.glsl  MultiResComposite.glsl  MultiplyImage.glsl  Negative.glsl  Quantization.glsl  RenderHistogram.glsl  Resampling.glsl  ResetHistogram.glsl  SharpenFilter.glsl  SmoothingFilter.glsl  SobelFilter.glsl  (+6 more)
shaders/AudioLab/: keys.glsl
shaders/ImageLab/: Filter.frag
src/Demos/: Demo.hpp
src/Demos/AudioLab/: AudioLab.cpp  AudioLab.hpp  olcNoiseMaker.h
src/Demos/ImageLab/: ImageLab.cpp  ImageLab.hpp
src/GL_Helpers/: GL_Camera.cpp  GL_Mesh.cpp  GL_Mesh.hpp  GL_Texture.hpp  Util.cpp  Util.hpp
